[package]
name = "obs-openvr"
version = "0.1.0"
authors = ["Matt Coffin <mcoffin13@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
glfw = "0.41"
image = "0.23"
log = "0.4"
env_logger = "0.8"

[dependencies.obs]
path = "../obs"

[dependencies.openvr]
path = "../openvr"

[build-dependencies]
pkg-config = "0.3"

[build-dependencies.cc]
version = "^1.0.67"
features = ["parallel"]
